--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -2,7 +2,8 @@
 ---------------------------------------- */
  :root {
   /* Theme Colors */
-  --theme-color: #FFCC18;
+  //--theme-color: #FFCC18;
+  --theme-color: green;
   --theme-color-two: #383a68;
   --primary: #FFCC18;
   --secondary: #3e4182;
