--- a/css/sass/_footer.scss
+++ b/css/sass/_footer.scss
@@ -2,7 +2,8 @@
  * Footer
  */
  .footer-top {
-  background-color: var(--secondary);
+  //background-color: var(--secondary);
+  background-color: var(--upei-red);
   color: #ffffff;
 }
 .footer-blocks,
