--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -3,11 +3,16 @@
  :root {
   /* Theme Colors */
   //--theme-color: #FFCC18;
+  --upei-red:#7C2529;
+  --upei-green:#789D4A;
+  --upei-yello:#F1B434;
   --theme-color: green;
   --theme-color-two: #383a68;
   --primary: #FFCC18;
   --secondary: #3e4182;
-  --dark: #2a2e52;
+  //--dark: #2a2e52;
+  --dark: #333;
+  --dark-grey: #9e9e9e;
   --light: #edeef5;
   --border: #cccccc;
   --bold-color: #111111;
@@ -22,6 +27,7 @@ body {
   font-family: var(--body-font);
   background: #ffffff;
   color: var(--text-color);
+  background-color: #fff !important;
 }
 /* Regions
 ---------------------------------------- */
@@ -44,7 +50,8 @@ strong {
   color: var(--bold-color);
 }
 em {
-  color: var(--primary);
+  //color: var(--primary);
+  color: var(--upei-green);
 }
 a {
   -webkit-transition: color 0.4s ease;
