--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -1,7 +1,9 @@
 /* Header Top
 ------------------------------- */
 .header-top {
-  background: var(--dark);
+  //background: var(--dark);
+  background: var(--upei-red);
+  //color: var(--light);
   color: var(--light);
 }
 .header-top a {
@@ -17,12 +19,14 @@
 /* Header
 ------------------------------- */
 .header {
-  background: var(--secondary);
+  //background: var(--secondary);
+  background: #fff;
   color: #ffffff;
 }
 .header a,
 .page-header a{
   color: var(--primary);
+  color: var(--dark-grey);
 }
 .header-container {
   padding: 1rem 0;
@@ -49,6 +53,10 @@
 .menu-wrap {
   font-family: var(--heading-font);
   font-weight: 700;
+  .menu a {
+
+  color: var(--dark-grey);
+  }
 }
 .menu-wrap ul.menu > li {
   margin-left: 6px;
@@ -92,8 +100,9 @@
 }
 /* Header -> Page header */
 .page-header {
-  background: var(--secondary);
-  color: #ffffff;
+  //background: var(--secondary);
+  background: #ccc;
+  color: var(--upei-green);
 }
 .page-header a:hover {
   color: #ffffff;
@@ -106,4 +115,5 @@
 }
 .page-header .page-title {
   color: #ffffff;
+  color: var(--upei-green);
 }
