--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,6 +1,6 @@
-.testclass.yippee {
-display: block;}
+//@format
 @import 'base';
+@import 'fonts';
 @import 'fonticons';
 @import 'layout';
 @import 'header';
@@ -14,19 +14,26 @@ display: block;}
 @import 'shortcodes';
 @import 'responsive';
 .slider-image {
-margin-top: 4rem;}
-.slider-text, .slider-text h1, .slider-text h2, .slider-text h3, .slider-text h4 {
-    color: var(--dark-grey);
+  margin-top: 4rem;
+}
+.slider-text,
+.slider-text h1,
+.slider-text h2,
+.slider-text h3,
+.slider-text h4 {
+  color: var(--dark-grey);
 }
 .slider {
-background: var(--content-bg);}
+  background: var(--content-bg);
+}
 div#block-homepagewelcome {
   a {
- color:var(--upei-red);}
-  h2,p {
-
-  color:#fff !important;
+    color: var(--upei-red);
   }
-  color:#fff !important;
-    background: #789d4a;
+  h2,
+  p {
+    color: #fff !important;
   }
+  color: #fff !important;
+  background: #789d4a;
+}
