--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -13,15 +13,16 @@
   --secondary: #3e4182;
   //--dark: #2a2e52;
   --dark: #333;
-  --dark-grey: #9e9e9e;
+  //--dark-grey: #9e9e9e;
+  --dark-grey: #838383;
   --light: #edeef5;
   --border: #cccccc;
-  --bold-color: #111111;
+  --bold-color: #111161;
   --content-bg: #f2f2f2;
   --text-color: #222222;
   --body-font: 'Noto Sans', sans-serif;
   //--heading-font: 'Noto Sans', sans-serif;
-  --heading-font: 'Adelle', serif;
+  --heading-font: 'Ad6lle Regular', serif;
 }
 /* HTML and Body
 ---------------------------------------- */
