--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -22,7 +22,7 @@
   --text-color: #222222;
   --body-font: 'Noto Sans', sans-serif;
   //--heading-font: 'Noto Sans', sans-serif;
-  --heading-font: 'Ad6lle Regular', serif;
+  --heading-font: 'Adelle Regular', serif;
 }
 /* HTML and Body
 ---------------------------------------- */
