--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@
   --content-bg: #f2f2f2;
   --text-color: #222222;
   --body-font: 'Noto Sans', sans-serif;
-  --heading-font: 'Ad6lle Regular', serif; }
+  --heading-font: 'Adelle Regular', serif; }
 
 /* HTML and Body
 ---------------------------------------- */
