--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   /* Theme Colors */
   --upei-red: #7c2529;
   --upei-green: #789d4a;
-  --upei-yello: #f1b434;
+  --upei-yellow: #f1b434;
   --theme-color: green;
   --theme-color-two: #383a68;
   --primary: #ffcc18;
@@ -13,7 +13,7 @@
   --dark-grey: #838383;
   --light: #edeef5;
   --border: #cccccc;
-  --bold-color: #111161;
+  --bold-color: var(--upei-red);
   --content-bg: #f2f2f2;
   --text-color: #222222;
   --body-font: 'Noto Sans', sans-serif;
@@ -57,7 +57,7 @@ a {
 a,
 a:active,
 li a.active {
-  color: var(--secondary); }
+  color: var(--upei-green); }
 
 a:hover {
   color: var(--primary); }
@@ -442,19 +442,20 @@ div#block-menudetailsforhomepage li {
 ---------------------------------------- */
 /* Main -> Admin tabs */
 ul.page-tabs {
-  border-bottom: 2px solid var(--secondary); }
+  border-bottom: 2px solid var(--upei-red); }
 
 .page-tabs li a {
   background: #dddddd;
-  color: var(--secondary);
-  border-right: 2px solid var(--secondary);
+  color: var(--upei-red);
+  border-right: 2px solid #fff;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease; }
 
 .page-tabs li.active-page-tab a,
 .page-tabs li a:hover {
-  background: var(--secondary); }
+  background: var(--upei-red);
+  color: #fff; }
 
 /* Main -> Filter Module */
 .filter-wrapper {
