--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -6,7 +6,7 @@
   //--theme-color: #FFCC18;
   --upei-red: #7c2529;
   --upei-green: #789d4a;
-  --upei-yello: #f1b434;
+  --upei-yellow: #f1b434;
   --theme-color: green;
   --theme-color-two: #383a68;
   --primary: #ffcc18;
@@ -17,7 +17,7 @@
   --dark-grey: #838383;
   --light: #edeef5;
   --border: #cccccc;
-  --bold-color: #111161;
+  --bold-color: var(--upei-red);
   --content-bg: #f2f2f2;
   --text-color: #222222;
   --body-font: 'Noto Sans', sans-serif;
@@ -64,7 +64,7 @@ a {
 a,
 a:active,
 li a.active {
-  color: var(--secondary);
+  color: var(--upei-green);
 }
 a:hover {
   color: var(--primary);
