--- a/css/sass/_main.scss
+++ b/css/sass/_main.scss
@@ -3,19 +3,20 @@
 ---------------------------------------- */
 /* Main -> Admin tabs */
 ul.page-tabs {
-  border-bottom: 2px solid var(--secondary);
+  border-bottom: 2px solid var(--upei-red);
 }
 .page-tabs li a {
   background: #dddddd;
-  color: var(--secondary);
-  border-right: 2px solid var(--secondary);
+  color: var(--upei-red);
+  border-right: 2px solid #fff;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 .page-tabs li.active-page-tab a,
 .page-tabs li a:hover {
-  background: var(--secondary);
+  background: var(--upei-red);
+  color: #fff;
 }
 /* Main -> Filter Module */
 .filter-wrapper {
