--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -207,7 +207,7 @@ select {
 /* Table
 ---------------------------------------- */
 th {
-  background: var(--secondary);
+  background: var(--light);
   color: #fff;
   border: 1px solid var(--dark);
 }
