--- a/css/sass/_main.scss
+++ b/css/sass/_main.scss
@@ -4,6 +4,7 @@
 /* Main -> Admin tabs */
 ul.page-tabs {
   border-bottom: 2px solid var(--upei-red);
+  margin-top: 1rem;
 }
 .page-tabs li a {
   background: #dddddd;
