--- a/css/sass/_components.scss
+++ b/css/sass/_components.scss
@@ -40,3 +40,51 @@
   background: var(--secondary);
   color: #ffffff;
 }
+//accordionJs
+#accordion {
+  .accordion_question * {
+    margin: 0;
+    font-weight: bold;
+  }
+
+  .accordion_answer * {
+    margin: 0;
+  }
+  //p {
+  //margin: 0;
+  //}
+}
+form#node-data-management-plan-form {
+  td {
+padding: 1rem;
+  }
+  td.field-multiple-drag {
+  padding: 0;
+  padding-top: 1rem;
+}
+  margin-top: 1rem;
+
+  .button,
+  .button,
+  button,
+  [type='button'],
+  [type='reset'],
+  [type='submit'] {
+    background-color: #ccc;
+    color: initial;
+    border: 1px solid var(--upei-red);
+    border-radius: 4px;
+    -webkit-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+    transition: all 0.4s linear;
+    padding: 0 5px;
+  }
+  button {
+    //background-color: #fff;
+  }
+}
+.footer-bottom-blocks .button {
+  background: var(--upei-green);
+  border: 4px solid var(--upei-yello);
+  padding: 0 9px;
+}
