--- a/css/sass/_homepage.scss
+++ b/css/sass/_homepage.scss
@@ -17,7 +17,8 @@
 .region-content-home-top .block:last-child {
   margin: 0;
 }
-$slider-height: calc(75vh - 2rem);
+//$slider-height: calc(75vh - 2rem);
+$slider-height: 400px;
 .slider {
   height: $slider-height;
   &-container {
