--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -209,6 +209,7 @@ select {
 th {
   background: var(--light);
   color: #fff;
+  color: var(--upei-red);
   border: 1px solid var(--dark);
 }
 td {
