--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -24,7 +24,7 @@
   color: #ffffff;
 }
 .header a,
-.page-header a{
+.page-header a {
   color: var(--primary);
   color: var(--dark-grey);
 }
@@ -56,8 +56,7 @@
   font-family: var(--heading-font);
   font-weight: 700;
   .menu a {
-
-  color: var(--dark-grey);
+    color: var(--dark-grey);
   }
 }
 .menu-wrap ul.menu > li {
@@ -81,18 +80,18 @@
 .search-box-content form label {
   color: var(--light);
 }
-.search-box-content input[type="search"] {
+.search-box-content input[type='search'] {
   background: url(../images/icons/search-icon.svg) top right no-repeat;
   color: #ffffff;
   -webkit-text-fill-color: #ffffff;
   border-bottom: 2px solid var(--border);
 }
-.search-box-content input[type="search"]:focus {
+.search-box-content input[type='search']:focus {
   background: url(../images/icons/search-icon.svg) top right no-repeat;
   border: 0;
   border-bottom: 2px solid var(--border);
 }
-.search-box-content input[type="search"]:-webkit-autofill {
+.search-box-content input[type='search']:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px var(--dark) inset;
   background-color: transparent;
   color: #ffffff;
@@ -103,8 +102,9 @@
 /* Header -> Page header */
 .page-header {
   //background: var(--secondary);
-  background: #ccc;
+  background: #fff;
   color: var(--upei-green);
+  box-shadow: inset 0px 11px 8px -10px #ccc, inset 0px -11px 8px -10px #ccc;
 }
 .page-header a:hover {
   color: #ffffff;
@@ -118,4 +118,6 @@
 .page-header .page-title {
   color: #ffffff;
   color: var(--upei-green);
+  color: var(--dark);
+  font-variant: small-caps;
 }
